--- a/Desktop/BE EV 3/views/login.ejs
+++ b/Desktop/BE EV 3/views/login.ejs
@@ -17,7 +17,7 @@
         .background {
             width: 70%;
             height: 100%;
-            background: url('logo.png') no-repeat center center/cover;
+            background: url('logo.jpeg') no-repeat center center/cover;
             position: relative;
             opacity: 0; /* For animation */
         }
